--- a/Views/Activity/Index.cshtml
+++ b/Views/Activity/Index.cshtml
@@ -24,7 +24,7 @@
             </li>
             </ul>
         </div>
-        <p>Welcome @ViewBag.currUser.FirstName</p>
+        <p>Welcome @ViewBag.currUser.FirstName!</p>
         <a href="/logout">Log out</a>
     </nav>
     <div class="container">
